--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ABLE testside</title>
+    <title>ABLE Testside</title>
     <style>
         body {
             margin: 0;
@@ -72,12 +72,20 @@
             0% { left: 100%; }
             100% { left: -100px; }
         }
+        .tittel {
+            color: #fff;
+            font-size: 200px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
     </style>
 </head>
 <body>
     <div class="road">
         <div class="car"></div>
         <div class="car2"></div>
+    </div>
+    <div>
+        <div class="tittel">ABLE Trafikkskole</div>
     </div>
 </body>
 <body>
@@ -113,4 +121,3 @@
     </script>
 </body>
 </html>
-
